# text-generation-webui

./: pyproject.toml
