[tool.poetry]
name = "text-generation-webui"
version = "0.1.0"
description = ""
authors = ["rgaurg <112725444+rgaurg@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "text_generation_webui"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
